<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="filter"
            type="com.sharkdev98.materialdesignpractice.MainActivity.InputFilterMinMax" />
    </data>

    <ScrollView
        android:id="@+id/rootViewScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="@dimen/material_design_horizontal_margin"
        android:paddingHorizontal="4dp"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:focusable="true"
        tools:context=".MainActivity">

        <RelativeLayout
            android:id="@+id/rootViewRelativeLayout"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <GridLayout
                android:id="@+id/rootViewGridLayout"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_width="match_parent"
                android:columnCount="2"
                android:layout_height="wrap_content">

                <Space
                    android:layout_row="0"
                    style="@style/space_style" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/runningTimerMaterialTextView"
                    android:layout_columnSpan="2"
                    android:layout_row="1"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:text="Time Switcher">
                </com.google.android.material.textview.MaterialTextView>

                <Space
                    android:layout_row="2"
                    style="@style/space_style" />

                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/minutes"
                    app:helperText="@string/min_range"
                    style="@style/timer_input_field">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/onTimerMinTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/min_default"
                        style="@style/text_edit_style_for_time_input">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/seconds"
                    app:helperText="@string/sec_range"
                    style="@style/timer_input_field">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/onTimerSecTextInputEditText"
                        android:gravity="center"
                        android:text="@string/sec_default"
                        style="@style/text_edit_style_for_time_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    style="@style/space_style"
                    android:layout_width="2dp"
                    android:layout_row="3" />

                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/minutes"
                    app:helperText="@string/min_range"
                    style="@style/timer_input_field">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/offTimerMinTextInputEditText"
                        android:gravity="center"
                        android:text="@string/min_default"
                        style="@style/text_edit_style_for_time_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/seconds"
                    app:helperText="@string/sec_range"
                    style="@style/timer_input_field">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/offTimerSecTextInputEditText"
                        android:gravity="center"
                        android:text="@string/sec_default"
                        style="@style/text_edit_style_for_time_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_row="6"
                    style="@style/space_style" />

                <CheckBox
                    android:id="@+id/loopingCheckBox"
                    android:layout_columnSpan="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingHorizontal="32dp"
                    android:gravity="center"
                    android:checked="true"
                    android:text="Looping"/>

                <Space
                    android:layout_row="8"
                    style="@style/space_style" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/start_timerMaterialButton"
                    android:text="@string/startTimerButtonText"
                    style="@style/large_button_style">
                </com.google.android.material.button.MaterialButton>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/stop_reset_timerMaterialButton"
                    style="@style/large_button_style"
                    android:layout_marginTop="16dp"
                    android:text="@string/stop_resetTimerButtonText">
                </com.google.android.material.button.MaterialButton>

            </GridLayout>
        </RelativeLayout>

    </ScrollView>
</layout>
